--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,13 +3,13 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="myprofile">My Profile</a>
+          <a class="nav-link" href="/myprofile">My Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="mygroups">My Groups</a>
+          <a class="nav-link" href="/groups"> Groups</a>
         </li>
       </ul>
       <span class="navbar-text">
