--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,15 +13,23 @@
         <div class="row">
           <div class="col-sm">
               
+            <%- include('post') %>
            
           </div>
           <div class="col-sm">
-            
+            <% if(msg) { %>
+
+              <div class="alert alert-warning" style="text-align: center;margin-top: 30px;" role="alert">
+                  <%=  msg %>
+                </div>
+      
+          <% }  else { %>
 
 <%  results.forEach(function(post){ %>
     
     <div class="card" style="width: 30rem;margin-top: 40px;">
         <div class="card-body">
+          <h3 class="card-title"> <%= post.username %> </h3>
           <h5 class="card-title"><%= post.title %></h5>
           <p class="card-text"> <%= post.content %> </p>
        
@@ -30,14 +38,14 @@
         </div>
       </div>
    <% }) %>
-
+   <% } %>
           </div>
           <div class="col-sm" style="text-align: center;">
             My Friends
           </div>
         </div>
       </div>
-
+    
 
 </body>
 </html>
