--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,19 +29,32 @@
     
     <div class="card" style="width: 30rem;margin-top: 40px;">
         <div class="card-body">
-          <h3 class="card-title"> <%= post.username %> </h3>
+         <a href="profile/<%= post.user %>"><h5 class="card-title"> <%= post.username %> </h5></a> 
+          <hr>
+          <h6> <%= post.datePost %> </h6>
+          <hr>
           <h5 class="card-title"><%= post.title %></h5>
           <p class="card-text"> <%= post.content %> </p>
        
-       <a href="up/<%= post.idPost %>"><button type="button" class="btn btn-outline-primary">UP</button></a> 
+       <a href="/up/<%= post.idPost %>"><button type="button" class="btn btn-outline-primary">UP</button></a> 
        <span class="badge badge-light"> <%= post.up %> </span>
         </div>
       </div>
    <% }) %>
    <% } %>
           </div>
-          <div class="col-sm" style="text-align: center;">
-            My Friends
+          <div class="col-sm" style="text-align: center;margin-top: 30px;">
+            
+            <ul class="list-group" style="margin-top: 10px;">
+              <li class="list-group-item disabled">Peoples you may know</li>
+              
+              <% users.forEach(function(entry){ %>
+
+                 <a href="profile/<%= entry.id %>"><li class="list-group-item"> <%= entry.username %> </li></a> 
+
+              <% }) %>
+
+            </ul>
           </div>
         </div>
       </div>
