--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,13 +21,11 @@
     <% }  else { %>
         
         
-        
- 
     <div class="container">
         <div class="row">
           <div class="col-sm">
               
-            <%=   %>
+            
            
           </div>
           <div class="col-sm">
@@ -37,11 +35,12 @@
     
     <div class="card" style="width: 30rem;margin-top: 40px;">
         <div class="card-body">
-            <h3 class="card-title"> <%= post.username %> </h3>
+            <h4 class="card-title"> <%= post.username %> </h4>
+            <hr>
           <h5 class="card-title"><%= post.title %></h5>
           <p class="card-text"> <%= post.content %> </p>
        
-       <a href="up/<%= post.idPost %>"><button type="button" class="btn btn-outline-primary">UP</button></a> 
+       <a href="/up/<%= post.idPost %>"><button type="button" class="btn btn-outline-primary">UP</button></a> 
        <span class="badge badge-light"> <%= post.up %> </span>
         </div>
       </div>
