--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -11,6 +11,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/groups"> Groups</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/creategroup"> Create  Group</a>
+        </li>
       </ul>
       <span class="navbar-text">
         <a class="nav-link" href="logout">Logout</a>
